# Pierce

./: .gitignore  .gitmodules  README.md  build_all.sh  test_all.sh
baselines/face/: .gitignore  CMakeLists.txt  environment.yml
baselines/face/common/include/: BinaryIO.h  Geometry.h  vec_types.h
baselines/face/src/: overlap_query.cpp  touch_query.cpp
baselines/tdbase_extensions/: .gitignore  CMakeLists.txt  ObjValidatorForDt.cpp  environment.yml
baselines/tdbase_extensions/src/geometry/: computing_gpu.cu
baselines/tdbase_extensions/src/include/: SpatialJoin.h  candidate.h  geometry.h  himesh.h  index.h  preprocess_timing.h  query_context.h  tile.h  util.h
baselines/tdbase_extensions/src/tools/: obj_to_dt.cpp  simulator.cpp  tdbase.cpp
benchmarks/: export_figures.py
benchmarks/common/: scenario_utils.py  viz_utils.py
benchmarks/common/adapters/: __init__.py  base.py  tdbase_common.py
benchmarks/datasets/: benchmark.py
benchmarks/overlap/: environment.yml  plot_overall_performance.py  run_cube_scalability.py  run_mesh_complexity_benchmark.py  run_microns_overlap.py  run_nu_scalability.py  selectivity_test.py  visualize_selectivity_test.py
benchmarks/overlap/adapters/: __init__.py  base.py  cgal_adapter.py  pierce_adapter.py  tdbase_adapter.py  touch_adapter.py
benchmarks/predicates/: core.py  plot_overall_performance.py  run_cube_query_comparison.py  run_microns_query_comparison.py  run_nu_scalability.py
benchmarks/predicates/adapters/: containment.py  intersection.py
pierce/common/: CMakeLists.txt
pierce/common/include/: BinaryIO.h  Geometry.h
pierce/preprocess/: CMakeLists.txt  environment-linux.yml  environment-windows.yml  environment.yml
pierce/preprocess/src/: DatasetLoaderFactory.cpp  DatasetLoaderFactory.h  DtMeshDatasetLoader.cpp  EdgePreprocessor.cpp  ObjMeshDatasetLoader.cpp  pierce_preprocess.cpp
pierce/preprocess/src/tdbase_lib/include/: util.h
pierce/query/: CMakeLists.txt  environment-linux.yml  environment.yml
pierce/query/src/: ptx_utils.h
pierce/query/src/applications/: app_cli_options.h  pierce_containment_main.cpp  pierce_intersection_main.cpp  pierce_overlap_main.cpp  pierce_overlap_two_pass_main.cpp
pierce/query/src/cuda/: mesh_containment.cu  mesh_containment.h  mesh_intersection.cu  mesh_intersection.h  mesh_intersection_anyhit.cu  mesh_overlap_edges.cu  mesh_query_deduplication.cu  mesh_query_deduplication.h  scan_utils.cu
pierce/query/src/geometry/: PrecomputedEdgeData.cpp  PrecomputedEdgeData.h
pierce/query/src/raytracing/: MeshContainmentLauncher.cpp  MeshContainmentLauncher.h  MeshIntersectionLauncher.cpp  MeshIntersectionLauncher.h  MeshOverlapEdgesLauncher.cpp  MeshOverlapEdgesLauncher.h
pierce/query/src/runtime/: GeometryIO.cpp  GeometryIO.h
pierce/query/src/utilities/: PairHitTracking.h
pierce/scripts/: generate_cubes_by_selectivity.py  generate_test_cubes.py
pierce/scripts/cpp_generator/: generate_spheres
scripts/: construct_micron_datasets.sh  convert_microns_to_obj.py  download_and_convert_microns.py  download_microns_mesh_subset.py  download_microns_region_by_mesh_bbox.py  download_microns_region_subset.py  environment.yml  generate_large_nu_nn_data.sh
